iptables/rules.v4
# Generated by iptables-save v1.8.4 on Sun Dec  6 20:45:26 2020
*filter
:INPUT ACCEPT [830:63718]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1630:180453]
:sshguard - [0:0]
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22345 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -j ACCEPT
-A INPUT -s 192.168.225.0/24 -p tcp -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p tcp -j ACCEPT
-A INPUT -s 193.191.117.6/32 -p tcp -j ACCEPT
-A INPUT -s 193.191.117.1/32 -p tcp -j ACCEPT
-A OUTPUT -s 10.0.0.0/8 -p tcp -j ACCEPT
-A OUTPUT -s 192.168.225.0/24 -p tcp -j ACCEPT
-A OUTPUT -s 172.16.0.0/16 -p tcp -j ACCEPT
-A OUTPUT -s 193.191.117.6/32 -p tcp -j ACCEPT
-A OUTPUT -s 193.191.117.1/32 -p tcp -j ACCEPT
COMMIT
# Completed on Sun Dec  6 20:45:26 2020
